//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table applications {
  id Int [pk, increment]
  name String [unique, not null]
  landingPage String
  description Json
  baseURL String
  isPublic Boolean [not null, default: false]
  subscriptions subscriptions [not null]
}

Table subscriptions {
  id Int [pk, increment]
  appId Int [not null]
  userId Int [not null]
  subTokens sub_tokens [not null]
  applications applications [not null]
  users users [not null]
}

Table users {
  id Int [pk, increment]
  email String [unique, not null]
  password String
  firstName String
  lastName String
  role Role [not null, default: 'CLIENT']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  subscriptions subscriptions [not null]
  tokens tokens [not null]
}

Table tokens {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  userId Int [not null]
  User users [not null]
}

Table sub_tokens {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  subscriptionId Int [not null]
  Subscription subscriptions [not null]
}

Enum Role {
  CLIENT
  ADMIN
}

Ref: subscriptions.appId > applications.id [delete: No Action]

Ref: subscriptions.userId > users.id [delete: No Action]

Ref: tokens.userId > users.id

Ref: sub_tokens.subscriptionId > subscriptions.id